Add cl_autodemo_delete_keepmatches cvar
Similar to `cl_autodemo_delete_keeprecords`, doesn't delete any demos where the player joined the match. Useful for non-race non-cts gamemodes.

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -822,7 +822,8 @@ set cl_lerpanim_maxdelta_framegroups 0.05 // must be faster than fastest weapon 
 set cl_lerpanim_maxdelta_server 0.1 // must be slower than slowest server controlled anim (e.g. animinfo stuff)
 
 // autodemo deleting
-seta cl_autodemo_delete_keeprecords 0 "when 1, records with a newly made race/cts demo are kept even if cl_autodemo_delete is used to delete demos"
+seta cl_autodemo_delete_keeprecords 0 "keep demos with a newly made Race/CTS record even if cl_autodemo_delete is used to delete demos"
+seta cl_autodemo_delete_keepmatches 0 "keep demos of matches you join even if cl_autodemo_delete is used to delete demos, 2 = even if you only joined during warmup"
 
 // freeze camera
 set cl_lockview 0 "when 1, the camera does not move any more; when 2, you can only control camera angles"
