--- a/notifications.cfg
+++ b/notifications.cfg
@@ -159,6 +159,7 @@ seta notification_INFO_DEATH_MURDER_VH_WAKI_DEATH "1" "0 = off, 1 = print to con
 seta notification_INFO_DEATH_MURDER_VH_WAKI_GUN "1" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_DEATH_MURDER_VH_WAKI_ROCKET "1" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_DEATH_MURDER_VOID "1" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
+seta notification_INFO_DEATH_MURDER_VOID_ENT "1" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_DEATH_SELF_AUTOTEAMCHANGE "1" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_DEATH_SELF_BETRAYAL "1" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_DEATH_SELF_CAMP "1" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
@@ -212,6 +213,7 @@ seta notification_INFO_DEATH_SELF_VH_SPID_ROCKET "1" "0 = off, 1 = print to cons
 seta notification_INFO_DEATH_SELF_VH_WAKI_DEATH "1" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_DEATH_SELF_VH_WAKI_ROCKET "1" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_DEATH_SELF_VOID "1" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
+seta notification_INFO_DEATH_SELF_VOID_ENT "1" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_DEATH_TEAMKILL "1" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_DOMINATION_CAPTURE_TIME "1" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_FREEZETAG_AUTO_REVIVED "1" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
@@ -616,6 +618,7 @@ seta notification_DEATH_MURDER_VH_WAKI_DEATH "1" "Enable this multiple notificat
 seta notification_DEATH_MURDER_VH_WAKI_GUN "1" "Enable this multiple notification"
 seta notification_DEATH_MURDER_VH_WAKI_ROCKET "1" "Enable this multiple notification"
 seta notification_DEATH_MURDER_VOID "1" "Enable this multiple notification"
+seta notification_DEATH_MURDER_VOID_ENT "1" "Enable this multiple notification"
 seta notification_DEATH_SELF_AUTOTEAMCHANGE "1" "Enable this multiple notification"
 seta notification_DEATH_SELF_BETRAYAL "1" "Enable this multiple notification"
 seta notification_DEATH_SELF_CAMP "1" "Enable this multiple notification"
@@ -669,6 +672,7 @@ seta notification_DEATH_SELF_VH_SPID_ROCKET "1" "Enable this multiple notificati
 seta notification_DEATH_SELF_VH_WAKI_DEATH "1" "Enable this multiple notification"
 seta notification_DEATH_SELF_VH_WAKI_ROCKET "1" "Enable this multiple notification"
 seta notification_DEATH_SELF_VOID "1" "Enable this multiple notification"
+seta notification_DEATH_SELF_VOID_ENT "1" "Enable this multiple notification"
 seta notification_ITEM_BUFF_DROP "1" "Enable this multiple notification"
 seta notification_ITEM_BUFF_GOT "1" "Enable this multiple notification"
 seta notification_ITEM_WEAPON_DONTHAVE "1" "Enable this multiple notification"
