Hide the zoom scope while in third person mode

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -47,6 +47,7 @@ seta cl_reticle_normal 1 "draw an aiming reticle when zooming with the zoom butt
 seta cl_reticle_normal_alpha 1 "alpha of the normal reticle"
 seta cl_reticle_weapon 1 "draw custom aiming reticle when zooming with certain weapons"
 seta cl_reticle_weapon_alpha 1 "alpha of the custom reticle"
+seta cl_reticle_chase 0 "show the zoom reticle while in chase camera mode"
 
 fov 100
 seta cl_velocityzoom_enabled 0 "velocity based zooming of fov"
