Add Spawn Unique mutator to prevent spawning at the same spawn point twice in a row

--- a/mutators.cfg
+++ b/mutators.cfg
@@ -551,3 +551,8 @@ set g_pinata_offhand 0 "if enabled, the second weapon will drop as well while du
 // =========
 set g_cloaked 0 "display all players mostly invisible"
 set g_balance_cloaked_alpha 0.25 "opacity of cloaked players"
+
+// ==============
+//  spawn unique
+// ==============
+set g_spawn_unique 0 "players cannot spawn at the same point twice in a row"
