--- a/commands.cfg
+++ b/commands.cfg
@@ -211,7 +211,13 @@ alias team_pink "cmd selectteam pink; cmd join"
 alias team_yellow "cmd selectteam yellow; cmd join"
 alias team_auto "togglemenu 0; cmd selectteam auto; cmd join"
 
+
+// Xonotic 0.9.0 update: menu will change any spec bind to spec_ask_forfeit (and set this cvar to 1)
+// TODO remove menu code and this cvar in a later Xonotic version
+seta _spec_ask_forfeit_bindupdate 0
+
 alias spec "spectate ${* ?}"
+alias spec_ask_forfeit "spectate \"\" ASK_FORFEIT"
 
 // mutator aliases
 alias sandbox "cmd g_sandbox ${* ?}"
