Add a "Never ask again" checkbox to the Forfeit dialog

--- a/commands.cfg
+++ b/commands.cfg
@@ -212,12 +212,16 @@ alias team_yellow "cmd selectteam yellow; cmd join"
 alias team_auto "togglemenu 0; cmd selectteam auto; cmd join"
 
 
-// Xonotic 0.9.0 update: menu will change any spec bind to spec_ask_forfeit (and set this cvar to 1)
+// Xonotic 0.9.0 update: menu will change any spec bind to spec_forfeit (and set this cvar to 1)
 // TODO remove menu code and this cvar in a later Xonotic version
-seta _spec_ask_forfeit_bindupdate 0
+seta _spec_forfeit_bindupdate 0
+
+seta menu_ask_forfeit 1 "ask for forfeit confirmation"
+alias spec_forfeit0 "spectate"
+alias spec_forfeit1 "spectate \"\" ASK_FORFEIT"
+alias spec_forfeit "spec_ask_forfeit${menu_ask_forfeit}"
 
 alias spec "spectate ${* ?}"
-alias spec_ask_forfeit "spectate \"\" ASK_FORFEIT"
 
 // mutator aliases
 alias sandbox "cmd g_sandbox ${* ?}"
