--- a/commands.cfg
+++ b/commands.cfg
@@ -216,10 +216,8 @@ alias team_auto "togglemenu 0; cmd selectteam auto; cmd join"
 // TODO remove this cvar and related menu code in a later Xonotic version
 seta _spec_forfeit_bindupdate 0
 
-seta menu_ask_forfeit 1 "ask for forfeit confirmation"
-alias spec_forfeit0 "spectate"
-alias spec_forfeit1 "spectate \"\" ASK_FORFEIT"
-alias spec_forfeit "spec_forfeit${menu_ask_forfeit}"
+seta spec_forfeit_ask 1 "allow asking for forfeit confirmation"
+alias spec_forfeit "spectate \"\" ASK_FORFEIT"
 
 alias spec "spectate ${* ?}"
 
