Refactor spec_forfeit to avoid networking spec_forfeit_ask and _menu_forfeit_dialog_available cvars

--- a/commands.cfg
+++ b/commands.cfg
@@ -217,7 +217,7 @@ alias team_auto "togglemenu 0; cmd selectteam auto; cmd join"
 seta _spec_forfeit_bindupdate 0
 
 seta spec_forfeit_ask 1 "allow asking for forfeit confirmation"
-alias spec_forfeit "spectate \"\" ASK_FORFEIT"
+alias spec_forfeit "spectate \"\" ${spec_forfeit_ask}${_menu_forfeit_dialog_available}"
 
 alias spec "spectate ${* ?}"
 
