Fix spec_forfeit alias by renaming spec_forfeit_ask to spec_forfeit_dont_ask and inverting its logic
This way only `spectate "" 01` asks for confirmation, `spectate "" 00|11|10` doesn't

--- a/commands.cfg
+++ b/commands.cfg
@@ -216,8 +216,8 @@ alias team_auto "togglemenu 0; cmd selectteam auto; cmd join"
 // TODO remove this cvar and related menu code in a later Xonotic version
 seta _spec_forfeit_bindupdate 0
 
-seta spec_forfeit_ask 1 "allow asking for forfeit confirmation"
-alias spec_forfeit "spectate \"\" ${spec_forfeit_ask}${_menu_forfeit_dialog_available}"
+seta spec_forfeit_dont_ask 0 "don't ask for forfeit confirmation"
+alias spec_forfeit "spectate \"\" ${spec_forfeit_dont_ask}${_menu_forfeit_dialog_available}"
 
 alias spec "spectate ${* ?}"
 
