Bring back polytrails implementation by TimePath with some fixes

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -951,3 +951,5 @@ set menu_reverted_nonsaved_cvars "" "These cvars are currently marked as saved i
 
 // Avoid perf problems near '0 0 0'; `set` without a description is because only current DP has this engine cvar
 set cl_areagrid_link_SOLID_NOT 0
+
+seta cl_polytrails 1 "enable polygon-based trail effect drawing (looks better but may impact performance)"
