Move polytrail cvars to a separate config file

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -914,6 +914,7 @@ exec effects-normal.cfg
 exec crosshairs.cfg
 exec gamemodes-client.cfg
 exec notifications.cfg
+exec polytrails.cfg
 
 seta cl_physics "default" "client selected physics set"
 
@@ -951,5 +952,3 @@ set menu_reverted_nonsaved_cvars "" "These cvars are currently marked as saved i
 
 // Avoid perf problems near '0 0 0'; `set` without a description is because only current DP has this engine cvar
 set cl_areagrid_link_SOLID_NOT 0
-
-seta cl_polytrails 1 "enable polygon-based trail effect drawing (looks better but may impact performance)"
