Refactor respawn ghosts to death ghosts
The name "respawn ghost" will remain as obsolete legacy as it's
impossible to rename it fully without breaking changes as clients
have a particle effect with that name.

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -238,7 +238,7 @@ seta cl_damageeffect_lifetime_max 6 "maximum lifetime a damage effect may have"
 set cl_deathglow 2 "number of seconds during which dead bodies glow out"
 set cl_deathglow_min 0.5 "glow out up to this glow factor"
 
-set cl_respawn_ghosts_keepcolors 1 "if enabled respawn ghosts keep body colors"
+set cl_respawn_ghosts_keepcolors 1 "if enabled player ghosts keep body colors"
 
 set _teams_available 0 "internal cvar, value is synced from the server to reflect currently available teams to join"
 
