--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -59,12 +59,11 @@ set g_telefrags_avoid 1 "when teleporters have a random destination, avoid telep
 set g_teleport_maxspeed 0 "maximum speed that a player can keep when going through a teleporter (if a misc_teleporter_dest also has a cap the smallest one of these will be used), 0 = don't limit, -1 = keep no speed"
 set g_teleport_minspeed 0 "minimum speed that a player can keep when going through a teleporter which affects speed"
 
-set g_respawn_ghosts 1 "if 1 dead bodies become ghosts and float away when the player respawns"
-set g_respawn_ghosts_gib 0 "spawn a ghost for gibbed players instantly"
-set g_respawn_ghosts_speed 5 "the speed with which respawn ghosts float and rotate"
-set g_respawn_ghosts_time 4.5 "amount of time a respawn ghost lasts before it starts fading out. 0 disables and ghosts fade when the body would"
-set g_respawn_ghosts_fadetime 1.5 "amount of time a respawn ghost takes to fade out"
-set g_respawn_ghosts_alpha 1 "respawn ghost alpha"
+set g_respawn_ghosts 1 "if 1 dead players leave behind ghosts which float away"
+set g_respawn_ghosts_speed 5 "the speed with which ghosts float and rotate"
+set g_respawn_ghosts_time 4.5 "amount of time a ghost lasts before it starts fading out. 0 disables and ghosts fade when the body would"
+set g_respawn_ghosts_fadetime 1.5 "amount of time a ghost takes to fade out"
+set g_respawn_ghosts_alpha 1 "ghost alpha"
 
 set sv_gibhealth 100 "Minus health a dead body must have in order to get gibbed"
 
