Add an option to turn off replacing disabled buffs with an available type

--- a/mutators.cfg
+++ b/mutators.cfg
@@ -345,6 +345,7 @@ set g_buffs_random_location 0 "randomize buff location on start and when reset"
 set g_buffs_random_location_attempts 10 "number of random locations a single buff will attempt to respawn at before giving up"
 set g_buffs_spawn_count 0 "how many buffs to spawn on the map if none exist already"
 set g_buffs_replace_powerups 0 "replace powerups on the map with random buffs"
+set g_buffs_replace_available 1 "if a buff type is disabled replace it with another buff type, with this option disabled the buff will be deleted instead"
 set g_buffs_drop 0 "allow dropping buffs"
 set g_buffs_cooldown_activate 5 "cooldown period when buff is first activated"
 set g_buffs_cooldown_respawn 3 "cooldown period when buff is reloading"
