--- a/bal-wep-samual.cfg
+++ b/bal-wep-samual.cfg
@@ -394,6 +394,7 @@ set g_balance_devastator_damageforcescale 1
 set g_balance_devastator_detonatedelay 0.02
 set g_balance_devastator_edgedamage 35
 set g_balance_devastator_force 450
+set g_balance_devastator_force_xyscale 1
 set g_balance_devastator_guidedelay 0.2
 set g_balance_devastator_guidegoal 512
 set g_balance_devastator_guiderate 70
