--- a/bal-wep-xdf.cfg
+++ b/bal-wep-xdf.cfg
@@ -394,6 +394,7 @@ set g_balance_devastator_damageforcescale 0
 set g_balance_devastator_detonatedelay 999
 set g_balance_devastator_edgedamage 40
 set g_balance_devastator_force 350
+set g_balance_devastator_force_xyscale 1
 set g_balance_devastator_guidedelay 0.2
 set g_balance_devastator_guidegoal 512
 set g_balance_devastator_guiderate 0
