Add an option for Electro combos to deal damage over time
Minor tweak to the combo particle effect to give it a more pronounced border

--- a/bal-wep-nexuiz25.cfg
+++ b/bal-wep-nexuiz25.cfg
@@ -180,6 +180,7 @@ set g_balance_minelayer_weaponthrowable 1
 set g_balance_electro_combo_comboradius 0
 set g_balance_electro_combo_comboradius_thruwall 0
 set g_balance_electro_combo_damage 80
+set g_balance_electro_combo_duration 0
 set g_balance_electro_combo_edgedamage 0
 set g_balance_electro_combo_force 200
 set g_balance_electro_combo_radius 250
