--- a/testing.cfg
+++ b/testing.cfg
@@ -14,7 +14,10 @@ alias test_arc_bounce_burst "settemp g_balance_arc_bolt_bounce_count 1 ; settemp
 alias test_ctf_stalemate90 "settemp g_ctf_stalemate_time 90"
 alias test_ctf_stalemate120 "settemp g_ctf_stalemate_time 120"
 
-alias _testing_list "$1 test_blaster_switch ; $1 test_crylink_sec_horizontal ; $1 test_rocket_flying ; $1 test_ctf_stalemate90 ; $1 test_ctf_stalemate120 ; $1 test_arc_bounce ; $1 test_arc_bounce_burst"
+// https://gitlab.com/xonotic/xonotic-data.pk3dir/-/merge_requests/1067
+alias test_electro_combo_over_time "settemp g_balance_electro_combo_duration 1.5"
+
+alias _testing_list "$1 test_blaster_switch ; $1 test_crylink_sec_horizontal ; $1 test_rocket_flying ; $1 test_ctf_stalemate90 ; $1 test_ctf_stalemate120 ; $1 test_arc_bounce ; $1 test_arc_bounce_burst ; $1 test_electro_combo_over_time"
 
 // defer addvote and delvote execution because program commands can't be executed if testing_disable
 // and testing_enable are executed at startup (no program is loaded yet)
