Rework to min and max

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -806,7 +806,7 @@ seta cl_movement_errorcompensation 1 "try to compensate for prediction errors an
 seta cl_movement_intermissionrunning 0 "keep velocity after the match ends, players may appear to continue running while stationary"
 
 seta cl_viewmodel_alpha 1 "Maximum opacity of the viewmodel, use a value between 0 and 1"
-seta cl_viewmodel_alpha_while_invisible 0 "Overrides the opacity of the viewmodel if invisible; -1 forces invisibility, 0 disables this override, and any value between 0 and 1 enables it with the value as opacity"
+seta cl_viewmodel_alpha_min 0 "Minimum opacity of the viewmodel, use a value between 0 and 1"
 
 set debugdraw 0
 set debugdraw_filter ""
