Somewhat standardize cvar descriptions
This commit isn't comprehensive, it mostly served to put all descriptions in a consistent format so that a script (added in a future commit) can sed replace them without exceptions where it doesn't work properly because the cvar has a different format than expected.
Description formatting rules used here thusfar will be outlined in such future commit.
Other rules applied so far include:
- making words like Devastator, Jetpack, Keepaway, etc. capitalized
- added "// script-ignore" on cvars which shouldn't be touched by the script
- option-lists (like "\"0\" = disabled, \"1\" = enabled") should be preceded by "; "
- etc.
Fixed any spelling errors I noticed.
Fully updated notifications.cfg, which will be excluded by the script due to the comment at the top of the file.
Didn't yet Americanize spelling.
Included AUTOCVAR_* descriptions.

--- a/physics.cfg
+++ b/physics.cfg
@@ -48,8 +48,8 @@ set g_physics_nexuiz_airaccel_qw 0.95
 set g_physics_nexuiz_airstrafeaccel_qw 0
 set g_physics_nexuiz_airspeedlimit_nonqw 0
 set g_physics_nexuiz_maxspeed 400
-set g_physics_nexuiz_jumpvelocity 300 "333 to match xonotic physics"
-set g_physics_nexuiz_jumpvelocity_crouch 0 "333 to match xonotic physics"
+set g_physics_nexuiz_jumpvelocity 300 "use \"333\" to match Xonotic physics"
+set g_physics_nexuiz_jumpvelocity_crouch 0 "use \"333\" to match Xonotic physics"
 set g_physics_nexuiz_maxairstrafespeed 0
 set g_physics_nexuiz_maxairspeed 220
 set g_physics_nexuiz_airstrafeaccelerate 0
@@ -203,8 +203,8 @@ set g_physics_vecxis_airaccel_qw 0.93
 set g_physics_vecxis_airstrafeaccel_qw 0
 set g_physics_vecxis_airspeedlimit_nonqw 0
 set g_physics_vecxis_maxspeed 400
-set g_physics_vecxis_jumpvelocity 300 "333 to match xonotic physics"
-set g_physics_vecxis_jumpvelocity_crouch 0 "333 to match xonotic physics"
+set g_physics_vecxis_jumpvelocity 300 "use \"333\" to match Xonotic physics"
+set g_physics_vecxis_jumpvelocity_crouch 0 "use \"333\" to match Xonotic physics"
 set g_physics_vecxis_maxairstrafespeed 0
 set g_physics_vecxis_maxairspeed 220
 set g_physics_vecxis_airstrafeaccelerate 0
