--- a/vehicles.cfg
+++ b/vehicles.cfg
@@ -125,7 +125,7 @@ set g_vehicle_racer_friction 0.45
 
 set g_vehicle_racer_water_time 5
 
-set g_vehicle_racer_hovertype 0 "0 = hover, otherwise = maglev"
+set g_vehicle_racer_hovertype 0 "0 = hover, otherwise maglev"
 set g_vehicle_racer_hoverpower 8000 "this is multiplied by 4 for the 4 engines"
 
 set g_vehicle_racer_turnroll 30
