--- a/commands.cfg
+++ b/commands.cfg
@@ -161,7 +161,7 @@ alias radar "qc_cmd_cl hud radar ${* ?}"
 alias scoreboard_columns_help "qc_cmd_cl hud scoreboard_columns_help"
 alias scoreboard_columns_set "qc_cmd_cl hud scoreboard_columns_set ${* ?}"
 
-seta team_selection_type 1 "Team selection type: 0 menu, 1 scoreboard"
+seta team_selection_type 1 "team selection type; 0 = menu, 1 = scoreboard"
 set _scoreboard_team_selection_available 0 // set to 1 by CSQC
 alias _team_selection_show00 "menu_cmd directmenu TeamSelect"
 alias _team_selection_show01 "menu_cmd directmenu TeamSelect"
@@ -175,7 +175,7 @@ alias menu_showteamselect team_selection_show
 // ========================================================
 //  cmd (client-to-server command) - server/command/cmd.qc
 // ========================================================
-set sv_clientcommand_antispam_time 1 "Amount of seconds after a command before another command can be called again without being considered spam. (Use -1 for no antispam limit)"
+set sv_clientcommand_antispam_time 1 "Amount of seconds after a command before another command can be called again without being considered spam; \"-1\" = no limit"
 set sv_clientcommand_antispam_count 8 "Amount of commands considered spam before commands are rejected."
 seta sv_status_privacy 1 "hide IP addresses from \"status\" and \"who\" replies shown to clients"
 seta cl_autoswitch 1 "automatically switch to newly picked up weapons if they are better than what you are carrying"
@@ -189,7 +189,7 @@ alias join                 "qc_cmd_cmd    join                 ${* ?}" // Become
 alias minigame             "qc_cmd_cmd    minigame             ${* ?}" // Start a minigame
 //alias mv_getpicture      "qc_cmd_cmd    mv_getpicture        ${* ?}" // Retrieve mapshot picture from the server
 alias physics              "qc_cmd_cmd    physics              ${* ?}" // Change physics set
-alias ready                "qc_cmd_cmd    ready                ${* ?}" // Qualify as ready to end warmup stage
+alias ready                "qc_cmd_cmd    ready                ${* ?}" // Qualify as ready to end warmup-stage
 //alias say                "qc_cmd_cmd    say                  ${* ?}" // Send a public chat message to all players
 //alias say_team           "qc_cmd_cmd    say_team             ${* ?}" // Send a chat message to all team mates
 alias selectteam           "qc_cmd_cmd    selectteam           ${* ?}" // Attempt to choose a team to join into
@@ -263,7 +263,7 @@ alias unlockteams          "qc_cmd_sv     unlockteams          ${* ?}" // Enable
 alias warp                 "qc_cmd_sv     warp                 ${* ?}" // Choose different level in campaign
 
 // other aliases for server commands
-set _endmatch 0 "if set to 1 ends the match immediately; use it instead of timelimit -1 (deprecated)"
+set _endmatch 0 "if set to \"1\" ends the match immediately; use instead of timelimit -1 (deprecated)"
 alias endmatch "_endmatch 1"
 alias bots "minplayers 4; minplayers_per_team 2"
 alias nobots "minplayers 0; minplayers_per_team 0"
@@ -388,14 +388,14 @@ set sv_vote_master_callable 0 "When set, users can use \"vmaster\" to call a vot
 set sv_vote_master_password "" "when set, users can use \"vlogin PASSWORD\" to log in as master, then run master commands directly using vdo"
 set sv_vote_master_playerlimit 2 "Minimum number of players needed for a player to be allowed to vote for master"
 set sv_vote_no_stops_vote 1 "Allow the vote caller to stop their own vote simply by voting no"
-set sv_vote_singlecount 0	"set to 1 to count votes once after timeout or to 0 to count with every vote"
+set sv_vote_singlecount 0	"set to \"1\" to count votes once after timeout or to \"0\" to count with every vote"
 set sv_vote_timeout 24	"a vote will timeout after this many seconds"
 set sv_vote_wait 120	"a player can not call a vote again for this many seconds when their vote was not accepted"
 set sv_vote_stop 15	"a player can not call a vote again for this many seconds when they stopped this vote (e.g. to correct it)"
-set sv_vote_majority_factor 0.5	"What percentage of the PLAYERS constitute a majority? (Must be at least 0.5, recommended: 0.5)"
-set sv_vote_majority_factor_of_voted 0.5 "What percentage of the VOTERS constitute a majority too? (Must be at least 0.5, recommended: 0.5)"
+set sv_vote_majority_factor 0.5	"What percentage of the PLAYERS constitute a majority? (must be at least 0.5, recommended \"0.5\")"
+set sv_vote_majority_factor_of_voted 0.5 "What percentage of the VOTERS constitute a majority too? (must be at least 0.5, recommended \"0.5\")"
 set sv_vote_gamestart 0 "Allow voting during map change"
-set sv_vote_debug 0 "count votes by bots too for debugging purposes (to get a bot to vote exec this command: bot_cmd 1 cc vote yes)"
+set sv_vote_debug 0 "count votes by bots too for debugging purposes (to get a bot to vote exec this command : bot_cmd 1 cc vote yes)"
 // when disabled, don't allow game type changes "note: set these two equal to JUST support simple majorities"
 set sv_vote_override_mostrecent 0
 
