--- a/minigames.cfg
+++ b/minigames.cfg
@@ -1,5 +1,5 @@
 set sv_minigames 1 "Allow minigames"
-set sv_minigames_observer 0 "Force minigame players to be observers. 0: don't move them to observer, 1: move them to observer, 2: force observer"
+set sv_minigames_observer 0 "Force minigame players to be observers; \"0\" = don't move them to observer, \"1\" = move them to observer, \"2\" = force observer"
 
 // Pong
 set sv_minigames_pong_paddle_size   0.3     "Paddle length relative to the board size"
